snippets section fix color contrast

--- a/style/_snippets.scss
+++ b/style/_snippets.scss
@@ -10,7 +10,8 @@
     }
 
     p {
-        color: $grayish-blue;
+        // color: $grayish-blue;
+        color: #525A60;
     }
 
     .image_text_container {
