--- a/style/style.css
+++ b/style/style.css
@@ -107,7 +107,7 @@ img {
   color: hsl(210deg, 10%, 33%);
 }
 .snippets p {
-  color: hsl(201deg, 11%, 66%);
+  color: #525A60;
 }
 .snippets .image_text_container {
   margin-top: 1.5rem;
